# flower_boutique_bot

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
Flower_Bot/: app.py  loader.py
Flower_Bot/database/: __init__.py  sqlite_db_user.py
Flower_Bot/handlers/: __init__.py
Flower_Bot/handlers/admins/: admin.py
Flower_Bot/handlers/eng_users/: __init__.py  english_each_bouquet.py
Flower_Bot/handlers/ukr_users/: __init__.py  backs.py  comment.py  each_bouquet.py  inline_handlers.py  purchase.py  states.py
Flower_Bot/keyboards/inline/: __init__.py  callback_datas.py  choice_inline_buttons.py  english_choise_inline_buttons.py
Flower_Bot/keyboards/reply/: __init__.py  choise_reply_buttons.py  english_choise_reply_buttons.py
Flower_Bot/prompts/: generator.py
Flower_Bot/tests/: test_admin.py  test_backs.py  test_callback_datas.py  test_choice_inline_buttons.py  test_choise_reply_buttons.py  test_db.py  test_each_bouquet.py  test_english_choise_inline_buttons.py  test_english_choise_reply_buttons.py  test_english_each_bouquet.py  test_prompts.py  test_states.py
